# JCJC

./: .gitignore  README.md  pyproject.toml  requirements.txt  sim-core.py
code/: run_simulation.py
code/plot/: __init__.py  lap_plots.py  save_run.py
code/utils/: xlsx_to_csv.py
configs/: default.yaml  track_jcjc.yaml  vehicle_example.yaml
data/: runs.csv
data/output/: .gitkeep
model-data/: mini4wd_motor_templates_by_motor.xlsx
model-data/chassis/: chassis_catalog.csv
model-data/motor/: Atomic-Tuned 2 PRO.csv  Atomic-Tuned 2.csv  Hyper-Dash 3.csv  Hyper-Dash PRO.csv  Light-Dash PRO.csv  Light-Dash.csv  Mach-Dash PRO.csv  Plasma-Dash.csv  Power-Dash.csv  Rev-Tuned 2 PRO.csv  Rev-Tuned 2.csv  Sprint-Dash.csv  Summary.csv  Torque-Tuned 2 PRO.csv  Torque-Tuned 2.csv  Ultra-Dash.csv
model-data/roller/: roller_catalog.csv
model-data/tire/: tire_catalog.csv
model-data/track/: jcjc.csv
notebooks/: energy_analysis.ipynb
plan/: project_launch.md
sim_core/: __init__.py  main.py
sim_core/cli/: __init__.py  run_simulation.py
sim_core/domain/: __init__.py  params.py  results.py  state.py
sim_core/evaluation/: __init__.py  scorer.py  sensitivity.py
sim_core/io/: __init__.py  config_loader.py  logger.py
sim_core/physics/: __init__.py  battery.py  corner.py  drivetrain.py  motor.py  obstacle.py  resistance.py  tire.py
sim_core/simulation/: __init__.py  events.py  lap.py  race.py
tests/: test_battery.py  test_lap.py  test_motor.py  test_race.py
